# EE596_Deep_Learning

./: README.md  main.py  pyproject.toml
Lab_1/: Lab1_Report.ipynb  Lab_1_KendallDavies.ipynb
Lab_1/.ipynb_checkpoints/: Lab1_Report-checkpoint.ipynb
Lab_2/: Lab_2_KendallDavies.ipynb
Lab_3/: Lab_3_KendallDavies.ipynb  training_log.txt
Lab_4/Lab_4_Kendall_Davies/: Lab_4_Kendall_Davies.ipynb  advanced_text_generation.py  sherlock_cleaned.txt  text_cleaner.py  update_notebook.py
Lab_5/Lab_5/: Lab_5_Kendall_Davies.ipynb
resources/Lab_1_Template/: Lab1_Report_Template.ipynb
resources/Week_1/Lab_1_Playground/: Lab1_AI_Completed.ipynb
resources/Week_1/Lab_1_Template/: Lab1_Report_Template.ipynb
resources/Week_2/: 1. Lab2_Examples (PyTorch Introduction).ipynb  2. Lab2_Examples (MLP in PyTorch).ipynb
resources/Week_3/Lab3_Examples/: Lab3_Example.ipynb
resources/Week_3/Lab3_Template/: Lab3_Template.ipynb
resources/Week_4/Lab4_Report_Template/: Lab 4 Template.ipynb
resources/Week_4/Lab4_example/: Lab 4 Example.ipynb
resources/Week_5/: signal_prediction_example.ipynb
